increase z-index of multiselect dropdowns to fix overlapping ad/bc btns

--- a/resources/sass/_multiselect.scss
+++ b/resources/sass/_multiselect.scss
@@ -1,3 +1,7 @@
+.multiselect {
+    z-index: 3;
+}
+
 .multiselect-sm {
     min-height: inherit !important;
     font-size: $font-size-sm !important;
